Fix nav bar for posts/ on small device, before the mobile breakpoint

--- a/client/my-sites/post-type-filter/style.scss
+++ b/client/my-sites/post-type-filter/style.scss
@@ -17,3 +17,21 @@
 		}
 	}
 }
+
+@include breakpoint( '660px-800px' ) {
+	$width-search: 40px;
+	$space-between-nav-and-search: 5px;
+
+	.section-nav.has-pinned-items {
+		padding-right: $space-between-nav-and-search + $width-search;
+	}
+	.section-nav__segmented .segmented-control {
+		margin: 0;
+	}
+	.search.is-expanded-to-container {
+		width: $width-search;
+		svg {
+			width:$width-search;
+		}
+	}
+}
